<resources>
    <string name="app_name">Mystagram</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="description">Description...</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="mystagram">Mystagram</string>
    <string name="email">Email</string>
    <string name="username1">Username</string>
    <string name="password1">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="_0">0</string>
    <string name="log_out">Log Out</string>
    <string name="todo">TODO</string>
</resources>