<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nav_logo_whiteout" />

    <EditText
        android:id="@+id/tvSetUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/username1" />

    <EditText
        android:id="@+id/tvSetPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password1"
        android:inputType="textPassword"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/tvSetEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up" />
</LinearLayout>